@@ -13,3 +13,5 @@
 -Djdk.nio.maxCachedBufferSize=2000000
 # Allow loading dynamic agent used by JOL
 -XX:+EnableDynamicAgentLoading
+# https://bugs.openjdk.org/browse/JDK-8327134
+-Djava.security.manager=allow
